# novel-ide

./: .gitignore  AGENTS.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: 01-产品需求文档.md  02-架构设计与开发指南.md  03-数据库设计.md  04-接口设计.md  05-工作流设计.md  初步需求.md  原始需求.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_chapters.sql  003_chapters_fts.sql  004_versions_models.sql  005_knowledge_base.sql  006_knowledge_fts.sql  007_workflow_agent.sql  008_cloud_sync.sql  009_shortcuts_theme.sql
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: agent.rs  ai.rs  chapter.rs  cloud.rs  export.rs  knowledge.rs  mod.rs  model.rs  project.rs  proofread.rs  search.rs  settings.rs  shortcuts.rs  theme.rs  version.rs  workflow.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/models/: chapter.rs  knowledge.rs  mod.rs  model_provider.rs  project.rs  settings.rs  version.rs
src-tauri/src/models/: agent.rs  mod.rs  shortcut.rs  workflow.rs
src-tauri/src/services/: ai_features.rs  cloud_sync.rs  export_docx.rs  export_epub.rs  export_pdf.rs  hyprland.rs  mod.rs  performance.rs  workflow_engine.rs
src-tauri/tests/: main.rs
src-tauri/tests/commands/: ai_test.rs  chapter_test.rs  mod.rs  project_test.rs
src-tauri/tests/services/: mod.rs  workflow_engine_test.rs
src/composables/: useKeyboardShortcuts.ts  (+3 more)
(+76 files in other folders)
