[package]
name = "novel-ide"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[dependencies]
tauri = { version = "2.11", features = ["tray-icon"] }
tauri-plugin-shell = "2.3"
tauri-plugin-dialog = "2.5"
tauri-plugin-fs = "2.2"
tauri-plugin-store = "2.2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite", "uuid"] }
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json", "stream"] }
zip = "2"
tokio-stream = "0.1"
futures-util = "0.3"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[lib]
name = "novel_ide_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
